fix: kuberentes status line

--- a/src/default.conf
+++ b/src/default.conf
@@ -29,4 +29,4 @@ local show_date_time
 readonly show_date_time="#[fg=$thm_blue,bg=$thm_gray,nobold,nounderscore,noitalics]$r_left_separator#[fg=$thm_bg,bg=$thm_blue,nobold,nounderscore,noitalics]$datetime_icon #[fg=$thm_fg,bg=$thm_gray] $date_time "
 
 local show_kubernetes_conf
-readonly show_kubernetes_conf="#[fg=$thm_blue,bg=$thm_gray]$r_left_separator#[bg=$thm_blue]#[fg=%thm_bg]$kubernetes_icon #[fg=$thm_fg,bh=$thm_gray]#(kubectl config view --minify -o jsonpath='{..namespace}')\[#(kubectl config current-context)\]"
+readonly show_kubernetes_conf="#[fg=$thm_blue,bg=$thm_bg,nobold,nounderscore,noitalics]$r_left_separator#[fg=$thm_bg,bg=$thm_blue,nobold,nounderscore,noitalics]$kubernetes_icon #(kubectl config view --minify -o jsonpath='{..namespace}') #[fg=$thm_fg,bg=$thm_gray] #(kubectl config current-context) "
